<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Online Colour Lab</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login User Name</string>
    <string name="user_login">User Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_home_page">Home</string>
    <string name="upload_menu_button">Send To Lab</string>
    <string name="view_profile_menu_button">My Profile</string>
    <string name="ocl_heading_text">Online Colour Lab</string>
    <string name="title_activity_image_upload">Send To Lab</string>
    <string name="select_lab_button">Select the Colour Lab</string>
    <string name="selected_lab_name_text_view">Selected Colour Lab</string>
    <string name="selected_color_lab_address_text_view">Selected Colour Lab Address</string>
    <string name="select_image_button">Select Images</string>
    <string name="remove_selected_image">Remove Image</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_user_username">Your Name</string>
    <string name="profile_user_name">User Name</string>
    <string name="profile_userpassword">Password</string>
    <string name="profile_contactNumber">Contact</string>

</resources>
