<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomePageActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:gravity="left|fill_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ocl_heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocl_heading_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

       

        <Button
            android:id="@+id/uploaddImagesButton"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:text="@string/upload_menu_button" />

       

        <Button
            android:id="@+id/viewProfileButton"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/view_profile_menu_button" />
    </LinearLayout>

</RelativeLayout>